--- a/public/downloadableContent/javadocs/tuple/Tuple.html
+++ b/public/downloadableContent/javadocs/tuple/Tuple.html
@@ -172,7 +172,7 @@ extends java.lang.Object</pre>
 <td class="colFirst"><code>java.lang.String</code></td>
 <td class="colLast"><code><strong><a href="Tuple.html#toString()">toString</a></strong>()</code>
 <div class="block">Returns the String representation of this Tuple in the
- form <a, b, c></div>
+ form &#X3C;a, b, c&#X3E;</div>
 </td>
 </tr>
 </table>
