--- a/public/downloadableContent/javadocs/tuple/Tuple.html
+++ b/public/downloadableContent/javadocs/tuple/Tuple.html
@@ -287,7 +287,7 @@ extends java.lang.Object</pre>
 <h4>toString</h4>
 <pre>public&nbsp;java.lang.String&nbsp;toString()</pre>
 <div class="block">Returns the String representation of this Tuple in the
- form <a, b, c></div>
+ form &#X3C;a, b, c&#X3E;</div>
 <dl>
 <dt><strong>Overrides:</strong></dt>
 <dd><code>toString</code>&nbsp;in class&nbsp;<code>java.lang.Object</code></dd>
